src/objects/Mogli_SMS__PossibleAnswer__c.object
<CustomObject>
    <fields>
        <fullName>Mogli_SMS__Next_Question__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Next Question</label>
        <referenceTo>Mogli_SMS__QuestionTemplate__c</referenceTo>
        <relationshipLabel>PossibleAnswer</relationshipLabel>
        <relationshipName>From_Answers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mogli_SMS__PossibleText__c</fullName>
        <label>Possible Text</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Mogli_SMS__QuestionTemplate__c</fullName>
        <label>Question Template</label>
        <referenceTo>Mogli_SMS__QuestionTemplate__c</referenceTo>
        <relationshipLabel>Possible Answers</relationshipLabel>
        <relationshipName>Possible_Answers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <label>Possible Answer</label>
    <nameField>
        <displayFormat>PAN{0000000000}</displayFormat>
        <label>Possible Answer Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Possible Answers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>